# geometry-shooter

./: .gitignore  CMakeLists.txt  README.md  config.txt
header/: Components.h  Entity.h  EntityManager.h  Game.h  Vec2.h
src/: Entity.cpp  EntityManager.cpp  Game.cpp  Vec2.cpp  main.cpp
